Tweak multibuffer buffering strategy.

Separate buffer size from pin range.
Buffering is now calculated as follows:

target buffer size is max(25Mb, 12 seconds * bitrate)

prefetch_low is max(20Mb, 10 seconds * bitrate)
prefetch_high is prefetch_low + 1Mb

pin_backwards is min(2 seconds * bitrate, 25Mb - prefetch_high)
pin_forwards is 21Mb

This means that the target buffer size is equivialent to BufferedDataSource.
Note that we pin 21Mb in front of the current location no matter what, this
means that if we happen to have that data in the cache we temporarily go over
the target buffer size to avoid freeing something and then re-fetch it right
afterwards.

BUG=608974

Review-Url: https://codereview.chromium.org/1954493002
Cr-Commit-Position: refs/heads/master@{#391691}

Former-commit-id: 08d81e2c010c6ad0fddd9d389c3208c263d3e424